--- a/sample_config.env
+++ b/sample_config.env
@@ -1,10 +1,27 @@
-APP_ID = "28653571"
-API_HASH = "eca35c0338b15aa33cc2d5df4a5a7b65"
+APP_ID = "28653571" # dah jan di ganti biar ga ribet
+API_HASH = "eca35c0338b15aa33cc2d5df4a5a7b65" ## dah jan di ganti biar ga ribet
 BOT_TOKEN = ""
-ADMINS = ""
+
+ADMINS = "" # tambah spasi kalo mau lebih dari 1 admin
 OWNER = "excute7"
+
 CHANNEL_DB = -100
-DB_URL = ""
-DB_NAME = ""
 FORCE_SUB_1 = -100
-# tambah lagi jika ingin lebih dari 2 FORCE_SUB_2 = -100123456
+# tambah lagi jika ingin lebih dari 2
+# contoh
+# FORCE_SUB_2 = -100123456
+
+# BUTTON UNLIMITID
+
+# Sesuaikan dengan type database kalian jika (mongodb isi mongo, jika SQL isi sql)
+# contoh DATABASE_TYPE = "mongo"
+DATABASE_TYPE = ""
+
+# DATABASE ISI SQL ATAU MONGODB Sesuai DATABASE_TYPE
+DB_URL = ""
+
+# jika kalian mengisi MongoDB tambahkan database name
+# SARAN ; GUNAKAN SESUAI USERNAME BOT
+DB_NAME = ""
+
+# Pilih ya cok Databasenya bukan di isi semua
